# link_visual_ipc

./: CMakeLists.txt  version.txt
linkvisual/: link_visual_def.h  link_visual_ipc.h
sample/: demo.c  demo.h
sample/ipc_operation/: dummy_ipc.cpp  dummy_ipc.h
sample/ipc_operation/media_parser/: media_parser.cpp  media_parser.h  picture_parser.cpp  picture_parser.h  property_parser.cpp  property_parser.h
sample/ipc_operation/media_source/: aac_h265_640.index  aac_h265_768.index
sample/sdk_api_operation/: linkkit_client.c  linkkit_client.h  linkvisual_client.c  linkvisual_client.h
